--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body,html{
     width: 100%;
     margin: 0;
     padding: 0;
-    background: #e74c3c !important;
+    background: #bdb3b3 !important;
     }
 
     .searchbar{
@@ -54,4 +54,7 @@ body,html{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+    }
+    .table{
+        background-color:black;
     }
